--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,4 @@
 @import url("./layout/tools.css");
 @import url("./layout/abaut.css");
 @import url("./layout/become.css");
+@import url("./layout/footer.css");
